--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
     <title>Unity WebGL Player | brick_breaker</title>
   </head>
   <body style="text-align: center">
-    <canvas id="unity-canvas" style="width: 960px; height: 720px; background: #231F20"></canvas>
+    <style>
+      #canvas-container {
+        padding-top: 75%;
+        position: relative;
+      }
+
+      #canvas-wrapper {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+      }
+        
+      #unity-canvas{
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+    <div id="canvas-container">
+      <div id="canvas-wrapper">
+        <canvas id="unity-canvas" style="width: 960px; height: 720px; background: #231F20"></canvas>
+      </div>
+    </div>
     <script src="Build/build.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
