--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
     <div id="canvas-container">
       <div id="canvas-wrapper">
-        <canvas id="unity-canvas" style="width: 960px; height: 720px; background: #231F20"></canvas>
+        <canvas id="unity-canvas"></canvas>
       </div>
     </div>
     <script src="Build/build.loader.js"></script>
